force-app/main/default/objects/Commitment__c/Commitment__c.object-meta.xml
<CustomObject>
    <description>An investing entity&apos;s soft or hard commitment to an Offering, prior to a funded Investment position.</description>
    <label>Commitment</label>
    <nameField>
        <displayFormat>CMT-{0000}</displayFormat>
        <label>Commitment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commitments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>