force-app/main/default/objects/Commitment__c/fields/Commitment_Date__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Date__c</fullName>
    <description>Date the commitment was received from the investing entity.</description>
    <inlineHelpText>Enter the date the commitment was received.</inlineHelpText>
    <label>Commitment Date</label>
    <type>Date</type>
</CustomField>