force-app/main/default/objects/Commitment__c/fields/Commitment_Status_Group__c.field-meta.xml
<CustomField>
    <fullName>Commitment_Status_Group__c</fullName>
    <label>Commitment Status Group</label>
    <description>Buckets commitment status into Committed, Funded, or Other for dashboard reporting.</description>
    <inlineHelpText>Read-only category derived from Status: Committed, Funded, or Other (all remaining statuses).</inlineHelpText>
    <type>Text</type>
    <formula><![CDATA[CASE(TEXT(Unison__Status__c), "Committed", "Committed", "Funded", "Funded", "Other")]]></formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
</CustomField>