force-app/main/default/objects/Commitment__c/fields/Committed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Committed_Amount__c</fullName>
    <description>Capital the investing entity has committed to this offering.</description>
    <inlineHelpText>Enter the committed amount in USD.</inlineHelpText>
    <label>Committed Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>