force-app/main/default/objects/Commitment__c/fields/Funded__c.field-meta.xml
<CustomField>
    <fullName>Funded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the commitment has been fully funded and converted to an investment position. Seeded in Phase A; automated in Phase C.</description>
    <inlineHelpText>Check when the commitment has been fully funded.</inlineHelpText>
    <label>Funded</label>
    <type>Checkbox</type>
</CustomField>