force-app/main/default/objects/Commitment__c/fields/Offering__c.field-meta.xml
<CustomField>
    <fullName>Offering__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The offering this commitment is made against.</description>
    <inlineHelpText>Select the offering the investing entity is committing to.</inlineHelpText>
    <label>Offering</label>
    <referenceTo>Offering__c</referenceTo>
    <relationshipLabel>Commitments</relationshipLabel>
    <relationshipName>Commitments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>