force-app/main/default/objects/Commitment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle stage of the commitment from soft commit through funding or cancellation.</description>
    <inlineHelpText>Track the commitment from Soft Commit through PPM signing, Committed, and Funded.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft Commit</fullName>
                <default>true</default>
                <label>Soft Commit</label>
            </value>
            <value>
                <fullName>PPM Sent</fullName>
            </value>
            <value>
                <fullName>PPM Signed</fullName>
            </value>
            <value>
                <fullName>Committed</fullName>
            </value>
            <value>
                <fullName>Funded</fullName>
            </value>
            <value>
                <fullName>Waitlisted</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>