force-app/main/default/objects/Commitment__c/fields/Status_Group__c.field-meta.xml
<CustomField>
    <fullName>Status_Group__c</fullName>
    <description>Buckets commitment status into Committed, Funded, or Other for dashboard reporting.</description>
    <formula>CASE(TEXT(Status__c), &quot;Committed&quot;, &quot;Committed&quot;, &quot;Funded&quot;, &quot;Funded&quot;, &quot;Other&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Group</label>
    <type>Text</type>
</CustomField>