force-app/main/default/objects/Commitment__c/validationRules/Committed_Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Committed_Amount_Not_Negative</fullName>
    <active>true</active>
    <description>Prevents Committed Amount from being set to a negative value. Factory-safe: zero and blank are permitted; only negative values (less than 0) trigger the error.</description>
    <errorConditionFormula>Committed_Amount__c &lt; 0</errorConditionFormula>
    <errorMessage>Committed Amount cannot be negative.</errorMessage>
</ValidationRule>