force-app/main/default/objects/Commitment__c/listViews/All_Commitments.listView-meta.xml
<ListView>
    <fullName>All_Commitments</fullName>
    <columns>NAME</columns>
    <columns>Commitment_Date__c</columns>
    <columns>Committed_Amount__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Commitments</label>
</ListView>