force-app/main/default/objects/Commitment__c/listViews/Soft_Commits.listView-meta.xml
<ListView>
    <fullName>Soft_Commits</fullName>
    <columns>NAME</columns>
    <columns>Offering__c</columns>
    <columns>Committed_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Soft Commit</value>
    </filters>
    <label>Soft Commits</label>
</ListView>